# watch-party

./: .env.example  .env.neko.example  .env.servarr.example  .gitignore  ANALYSIS.md  HANDOFF.md  MOBILE-SPEC.md  PHONE-UX-PLAN.md  PLAN.md  TODO.md  TS_MIGRATION_AUDIT.md  TS_MIGRATION_PROGRESS.md  UI-BRIEF.md  coturn.conf  docker-compose.neko.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.servarr.yml  docker-compose.yml  livekit.yaml  livekit.yaml.example  package-lock.json  package.json  session-ses_08e7-summary.md  settings.json  test-party.mjs  ystemctl --user status xdg-desktop-portal
.github/workflows/: deploy.yml  desktop-apps.yml  main.yml  release-desktop.yml
app/: .dockerignore  Dockerfile  package-lock.json  package.json
app/client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
app/client/public/: manifest.webmanifest  watch_party.lottie
app/client/src/: App.jsx  App.tsx  glass.jsx  glass.tsx  globals.d.ts  guards.ts  main.jsx  main.tsx  mirror.ts  partyAuthority.test.ts  partyAuthority.ts  router.ts  styles.css  types-relaxed-jsx.d.ts  types.ts  watchLayers.js
app/harness/: cli.js  client.js  scenario.js  suite.js
app/harness/scenarios/: _helpers.js  advanced.js  dragging.js  hls.js  hostjump.js  hysteresis.js  permission.js  scale.js  state.js
app/server/: auth.js  desktop-builds.js  desktop-builds.test.js  index.js  jellyfin.js  jellyfin.test.js  library.js  livekit.js  native.js  native.test.js  party-store.js  playback.js  session.js  session.test.js  subtitles.js  subtitles.test.js  syncplay.js
app/server/neko/: admin.js  admin.test.js  config.js  config.test.js  container.js  container.test.js  controller.js  controller.test.js  detach.js  detach.test.js  idle.js  idle.test.js  integration.test.js  lease.js  lease.test.js  proxy.js  proxy.test.js  routes.js  routes.test.js  teardown.js  teardown.test.js
app/server/servarr/: arr.js  config.js  index.js  manual.js  manual.test.js  qbittorrent.js  tmdb.js
deploy/: README-servarr.md  connect-servarr.sh  up-prod.sh
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: download.rs  ipc.rs  lib.rs  main.rs  mpv.rs  offline.rs  window.rs
docs/: README.md  watchparty-sync-redesign.md
docs/flutter/: PARITY-PLAN.md  PLAN.md  VISUAL-QA.md
docs/flutter/briefs/: contracts.md  design-tokens.md  discover-find.md  downloads-offline.md  library-detail.md  login.md  party-room.md  player-watch.md  (+1 more)
docs/native/: PLAN.md  SPIKE-NOTES.md
docs/ops/: neko-recreate.md
docs/plans/: 2026-07-20-neko-collab-browser.md
docs/redesign/: PLAN.md
docs/specs/: 2026-07-20-neko-collab-browser.md  2026-07-20-neko-spike-decision.md
docs/watchparty-design/: README.md
flutter_app/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
flutter_app/integration_test/: downloader_test.dart  livekit_room_test.dart  player_live_test.dart
flutter_app/ios/: Podfile
flutter_app/lib/: main.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/packaging/: README.md  build-linux.sh
flutter_app/test/: active_party_detail_test.dart  api_client_test.dart  app_shell_test.dart  artwork_cache_test.dart  auth_provider_test.dart  cache_fill_test.dart  catalog_cache_test.dart  chat_provider_test.dart  desktop_updater_test.dart  detail_screen_layout_test.dart  downloads_provider_test.dart  floating_camera_tile_test.dart  gallery_screen_test.dart  library_provider_test.dart  offline_download_test.dart  party_provider_test.dart  profile_menu_update_test.dart  range_cache_test.dart  socket_client_test.dart  subtitle_content_api_test.dart  trickplay_api_test.dart  widget_test.dart
flutter_app/tool/: player_smoke.dart
spike/: README.md  pubspec.yaml
spike/lib/: main.dart
spike/linux/: CMakeLists.txt  my_application.cc
spike/test/: widget_test.dart
(+314 files in other folders)
