[package]
name = "watchparty-desktop"
version = "0.1.0"
description = "Watchparty desktop — all-codec playback, offline downloads, watch-party sync"
edition = "2021"
rust-version = "1.77"

[lib]
name = "watchparty_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# N1 (mpv.rs / window.rs): hand-rolled libmpv FFI (no bindgen — libclang absent
# on the dev box) linking libmpv.so directly, plus Xlib for the embedded X11
# child window (mpv `--wid`) that mirrors MaxVideoPlayer's X11-child approach.
raw-window-handle = "0.6"
x11 = { version = "2", features = ["xlib"] }
# N2 (download.rs) will add an HTTP client (e.g. `reqwest`) + async runtime
# (`tokio`) here for the multi-part downloader.

[features]
custom-protocol = ["tauri/custom-protocol"]
