[package]
name = "watchparty-desktop"
version = "0.1.0"
description = "Watchparty desktop — all-codec playback, offline downloads, watch-party sync"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "watchparty_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# N1 (mpv.rs / window.rs): hand-rolled libmpv FFI (no bindgen — libclang absent
# on the dev box) linking libmpv.so directly, plus Xlib for the embedded X11
# child window (mpv `--wid`) that mirrors MaxVideoPlayer's X11-child approach.
raw-window-handle = "0.6"
x11 = { version = "2", features = ["xlib"] }
# N2 (download.rs / offline.rs): multi-part resumable downloader + offline store.
# (tokio's `time` feature below is also what N7's app_quit grace delay needs.)
http-downloader = { version = "0.3.2", default-features = false, features = ["breakpoint-resume", "bson-file-archiver", "tracing"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
url = "2.5.8"
once_cell = "1.21.4"
chrono = { version = "0.4.45", features = ["serde"] }
# N7: tray-resident lifecycle plugins (docs/native/PLAN.md §2b).
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.1"
# Testing/debugging bridge for @hypothesi/tauri-mcp-cli. Registered only under
# #[cfg(debug_assertions)] in lib.rs, so it is never active in release builds.
tauri-plugin-mcp-bridge = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.27.0"
